--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,7 @@
 
     <!-- start banner -->
     <div class="banner" id="practiceTest_banner">
-      <p>Get started with <strong>2 free</strong> ACT tests. Click for details.</p>
+      <p>Get started with <strong>4 free</strong> ACT section tests. Click for details.</p>
     </div>
     <div class="modal" id="practiceTest_modal">
       <div class="modal-body">
