--- a/public/pricing.html
+++ b/public/pricing.html
@@ -108,7 +108,7 @@
 
     <!-- start banner -->
     <div class="banner" id="practiceTest_banner">
-      <p>Get started with <strong>2 free</strong> ACT tests. Click for details.</p>
+      <p>Get started with <strong>4 free</strong> ACT section tests. Click for details.</p>
     </div>
     <div class="modal" id="practiceTest_modal">
       <div class="modal-body">
@@ -266,7 +266,7 @@
         </div>
 
         <div class="practice-test-wrapper">
-          <h2>2 free full length ACT practice tests</h2>
+          <h2>4 free full length ACT section practice tests</h2>
           <p>Not sure how many points you need to go up? Take two <strong>free</strong> full length ACT tests and get your results back immediately.</p>
           <div class="flex-row">
             <input type="email" placeholder="email">
