--- a/public/pricing.html
+++ b/public/pricing.html
@@ -117,8 +117,8 @@
             <path d="M10,10 L22,22 M22,10 L10,22"></path>
           </svg>
         </div>
-        <h1>2 tests <span class="accent">free!</span></h1>
-        <h2>8 sections timed tests</h2>
+        <h1>1 full test <span class="accent">free!</span></h1>
+        <h2>4 sections timed tests</h2>
         <p>Use our custom test taker to practice before the test.</p>
         <p>Enter your email so we can send you your custom link to take the tests.</p>
         <input type="email" placeholder="email">
