loading screen on landing

--- a/public/test-taker.html
+++ b/public/test-taker.html
@@ -60,6 +60,7 @@
 <body onload="setup()">
   <!-- Landing Page -->
   <section class="landing" id="landing">
+    <div class="loading"></div>
     <div class="header">
       <div class="container"><h1><span class="color-accent">ACT</span> Test Taker</h1></div>
       <div class="container">
