--- a/public/new-assignment.html
+++ b/public/new-assignment.html
@@ -167,4 +167,143 @@
 
       </section>
     </main>
+    <h2 style="margin-left: 1em;">Instructions</h2>
+    <main class="instructions">
+      <section class="assignments">
+        <h3>Assignments</h3>
+        <p>
+          The following assignments may be created during an ACT lesson. Please make sure to follow their
+          instructions carefully.
+        </p>
+        <details>
+          <summary>Worksheet</summary>
+          <p>
+            These assignments are used primarily when teaching a topic.
+            The topic is picked based on what is being taught right now.
+            The assignment will automatically pick a question for that topic as the student
+            reaches the last question so that you may continue to use the assignment until
+            you need it graded, at which point you will submit it.
+          </p>
+          <p>How to create</p>
+          <ul>
+            <li>Verify that the correct user is selected in the user box</li>
+            <li>Select generate assignment "by topic"</li>
+            <li>Select the desired section</li>
+            <li>You should now see the list of topics for that section ordered by frequency</li>
+            <li>Check the desired topic (verify this is the only topic checked)</li>
+            <li>Set the desired topic's weight to "1"</li>
+            <li>Set the "Number of Questions" to blank (READING: set to "1". This will give only 1 passage a time.)</li>
+            <li>Set the "Open" time to any time before right now</li>
+            <li>Set the "Close" time to some time in the future (make sure it is enough time to start it in the test taker)</li>
+            <li>Set the "Time" to blank</li>
+            <li>Select "Worksheet" for the topic</li>
+            <li>Submit the assignment</li>
+            <li>Verify that the assignment was successfully saved on the test taker</li>
+          </ul>
+        </details>
+
+        <details>
+          <summary>Practice</summary>
+          <p>
+            These assignments are used primarily when practicing during a lesson.
+            The topics should be chosen based on what was learned in the session today.
+            The assignment will automatically pick a question from the topics you pass in 
+            weighted by how frequently they appear on the test. When you are ready
+            to review the student will submit and the assignment will be graded.
+          </p>
+          <p>How to create</p>
+          <ul>
+            <li>Verify that the correct user is selected in the user box</li>
+            <li>Select generate assignment "by topic"</li>
+            <li>Select the desired section</li>
+            <li>You should now see the list of topics for that section ordered by frequency</li>
+            <li>Check the desired topics (verify these are the only topic checked)</li>
+            <li>Set the desired topics' weights to their given frequency</li>
+            <li>Set the "Number of Questions" to blank (READING: set to "1". This will give only 1 passage a time.)</li>
+            <li>Set the "Open" time to any time before right now</li>
+            <li>Set the "Close" time to some time in the future (make sure it is enough time to start it in the test taker)</li>
+            <li>Set the "Time" to blank</li>
+            <li>Select "Practice" for the topic</li>
+            <li>Submit the assignment</li>
+            <li>Verify that the assignment was successfully saved on the test taker</li>
+          </ul>
+        </details>
+
+        <details>
+          <summary>Daily</summary>
+          <p>
+            These assignments are the first at home asssignment the student will complete after each session.
+            They will be assigned to be done the day after a session as a review of material a day after.
+            The topics are chosen based on what was taught in the session today.
+          </p>
+          <p>How to create</p>
+          <ul>
+            <li>Verify that the correct user is selected in the user box</li>
+            <li>Select generate assignment "by topic"</li>
+            <li>Select the desired section</li>
+            <li>You should now see the list of topics for that section ordered by frequency</li>
+            <li>Check the desired topics (verify these are the only topic checked)</li>
+            <li>Set the desired topics' weights to their given frequency</li>
+            <li>Set the "Number of Questions" appropriatley based on section:
+              <ul>
+                <li>English - 10 per topic</li>
+                <li>Math - 10 per topic</li>
+                <li>Reading - 30</li>
+                <li>Science - 10 per topic</li>
+              </ul>
+            </li>
+            <li>Set the "Open" time to tomorrow at midnight</li>
+            <li>Set the "Close" time to 2 days after open at midnight</li>
+            <li>Set the "Time" to blank</li>
+            <li>Select "Daily" for the topic</li>
+            <li>Submit the assignment</li>
+            <li>Verify that the assignment was successfully saved on the test taker</li>
+          </ul>
+        </details>
+
+        <details>
+          <summary>Homework</summary>
+          <p>
+            These assignments are the second at home asssignment the student will complete after each session.
+            They will be assigned to be done a week after a session as a review of material a week after.
+            The topics are chosen based on all lessons taught up to this point.
+          </p>
+          <p>How to create</p>
+          <ul>
+            <li>Reload the page to have the latest topic scores</li>
+            <li>Verify that the correct user is selected in the user box</li>
+            <li>Select generate assignment "by topic"</li>
+            <li>Select the desired section</li>
+            <li>You should now see the list of topics for that section ordered by frequency</li>
+            <li>Check the desired topics (verify these are the only topic checked)</li>
+            <li>Set the desired topics' weights to their given score</li>
+            <li>Set the "Number of Questions" to blank</li>
+            <li>Set the "Open" time to a week from yesterday at midnight</li>
+            <li>Set the "Close" time to 2 days after open at midnight</li>
+            <li>Set the "Time" appropriatley based on section:
+              <ul>
+                <li>English - 75</li>
+                <li>Math - 60</li>
+                <li>Reading - 35</li>
+                <li>Science - 35</li>
+              </ul>
+            </li>
+            <li>Select "Homework" for the topic</li>
+            <li>Submit the assignment</li>
+            <li>Verify that the assignment was successfully saved on the test taker</li>
+          </ul>
+        </details>
+      </section>
+
+      <section class="lessons">
+        <h3>Lessons</h3>
+        <p>
+          Topics taught will be tracked here for each section. To mark a topic as taught, first verify that the "User" box shows the 
+          appropriate student. Then select the desired section under "Lessons"
+          and click on the topic name or corresponding button to mark it as taught. You should see the current date appear in the button
+          if the click was registered. If you mistakenly clicked on the wrong topic you may click it again to remove it. Be careful 
+          not to remove a legitmate lesson.
+        </p>
+      </section>
+    </main>
   </body>
