--- a/public/testEditor.html
+++ b/public/testEditor.html
@@ -193,7 +193,7 @@
         </div>
 
         <!-- Passage Info -->
-        <div id = 'passage' class = 'sectionPassage'>
+        <div id = 'passagePassage' class = 'sectionPassage'>
           <div class='columns'>
             <div class="rows" style = 'margin-left:10px;'>
               <label for="passageText" id='passageTextLabel'>Passage</label>
