--- a/public/view-curriculum.html
+++ b/public/view-curriculum.html
@@ -20,6 +20,7 @@
   </head>
 
   <body>
+    <h1>Curriculum</h1>
     <select name="sections" id="sections" onchange="sectionSelectedCallback(event)">
       <option value="" disabled selected>select a section</option>
       <option value="english">English</option>
@@ -30,6 +31,247 @@
     <select name="topics" id="topics" onchange="topicSelectedCallback(event)"></select>
 
     <div id="curriculum-content"></div>
+
+    <div class="session-details">
+      <h1>Session Details</h1>
+
+      <details>
+        <summary>English Session</summary>
+        <h3>Review (30 Minutes)</h3>
+        <p>
+          The purpose of this time is to review the topics that were taught last time. 
+          The goal should be to have the student teach to you how to identify the topics and how to approach them.
+          Do this one topic at a time. Split your time evenly between the topics. Use the questions they did for their Daily and Homework assignment.
+          They should be able to demonstrate the proper way they answered correct questions and then also explain
+          how to get the question they got wrong correct in the proper method.
+        </p>
+        <p>
+          If a student did not do their homework, meaning they did not answer all question on their Daily or did not answer a sufficent
+          amount of question on their homework (should be around 75 give or take 15 -ish), please let us know and we will review the homework
+          and take action from their. What you can do in the mean time is create Worksheet assignments to take the place of the incomplete homework.
+          Use what you have from the homework first but if you don't have enough, then use the Worksheets.
+        </p>
+
+        <h3>Learn (60 minutes)</h3>
+        <p>
+          This will be the bulk of the lesson where we learn new topics. You will teach the topics in the order
+          that they appear under the lessons section in the new assignment page. Start with the next topic that
+          hasn't been tuaght yet. The goal should be to explain to the student how to identify and appraoch the topic,
+          All of this information should be memorized but if you need a reminder see the curriculum above.
+          The student must show you that they understand and not merely tell you they do. Use a Worksheet assignment to 
+          to get questions of the given topic. 
+        </p>
+        <p>
+          You should start off by doing the problem for the student by showing
+          how you know this question is of the given type and then properly showing the approach. Do this a few times then
+          move on to holding their hand through the problem. Ask them guiding questions, "how do we know this is a _______ question,"
+          "how do we begin to apporach this type of question," etc. Help them figure it out step by step. Then move on to having them
+          walk through a problem out loud and explain it fully back to you. Hopefully by the time you do this a few times they should have it down.
+        </p>
+        <p>
+          Learning a topic should take as long as the student needs to really understand the material. We are looking for understanding, not
+          completion of the curriculum. If you have a student that is breezing through the topics then move quickly and if not then take the 
+          time you need. If you are worried about how long (or short) you are taking to teach a topic let us know and we can definitly help
+          you out. It will take time to really figure out the right timing for each student but early on you'll do great.
+        </p>
+
+        <h3>Practice (30 minutes)</h3>
+        <p>
+          This is the time for the student to practice on their own what they just learned. You should create a Practice
+          assigment with all of the topics that you covered today and let them do as many questions as they can. We recommend
+          letting your student work for no more than 10 minutes before jumping in to review. Reviewing is simply going over with
+          the student what questions they got wrong and helping them get the correct answer. Then set them off for another Practice
+          assignment. Do this until the end of the session. 
+        </p>
+        <p>
+          This is your time to take a break! While the student is working, you can mute your mic and turn off your camera and do whatever you need to do.
+          Jump back on to have the student submit the assignment and you two can begin reviewing. Don't feel like you need to be in front
+          of your computer monitoring them. I would listen to see if they have questions pop up but they should do this question completely alone.
+          We use this time to get an idea of how they are doing so make sure they do their very best and you not help them until the review time.
+        </p>
+
+        <h3>Assigning Homework</h3>
+        <p>
+          Ideally this is done while your student is practicing so that they have uninterrupted session time. Make sure to assign a Daily and a Homework
+          assignment after each session. More instruction can be found for each assignment on the new assignment page. One last thing before leaving a session,
+          make sure to submit any assignmnt you started in the session so that the student doesn't have those confusing them during the week.
+        </p>
+      </details>
+
+      <details>
+        <summary>Math Session</summary>
+        <h3>Review (30 Minutes)</h3>
+        <p>
+          We want to help the student understand their mistakes. As you review questions they got wrong make sure to not tell the them
+          the answer but have them explain what they did and help them correct mistakes one step at a time. Focus first on the topics they
+          learned last session and hit as many wrong questions as you can. If you run out of wrong answers, create a Worksheet assignment of the topic
+          they struggled with the most and work through some questions together.
+        </p>
+        <p>
+          If a student did not do their homework, meaning they did not answer all question on their Daily or did not answer a sufficent
+          amount of question on their homework (should be around 60 give or take 20 -ish), please let us know and we will review the homework
+          and take action from their. What you can do in the mean time is create Worksheet assignments to take the place of the incomplete homework.
+          Use what you have from the homework first but if you don't have enough, then use the Worksheets.
+        </p>
+
+        <h3>Learn (60 minutes)</h3>
+        <p>
+          Practice, practice, practice. Instead of teaching everything they need to know for a topic, we are just going to jump right in.
+          The assumption we are making is that for the majority of topics, student's should have some prior exposure to the question and
+          they need only a refresher. Topcis wille be taught in the order they appear under the lessons area on the new assignment page.
+          Create a Worksheet assignment for the one topic you are covering next and go through it together one by one. Let the student lead
+          and help them as they get stuck. They should explaining each step out loud and you should only give hints when they are stuck. 
+          If the student has no idea what to do in a problem, step back for a moment and teach the concept necessary to answer the question.
+          We want to make sure the student understands the concepts and not just how to answer very specific questions. Do this until 
+          you have covered enough variety that you feel the student understands the topic and can get the majority of questions correct.
+        </p>
+
+        <h3>Practice (30 minutes)</h3>
+        <p>
+          This is the time for the student to practice on their own what they just learned. You should create a Practice
+          assigment with all of the topics that you covered today and let them do as many questions as they can. We recommend
+          letting your student work for no more than 10 minutes before jumping in to review. Reviewing is simply going over with
+          the student what questions they got wrong and helping them get the correct answer. Then set them off for another Practice
+          assignment. Do this until the end of the session. 
+        </p>
+        <p>
+          This is your time to take a break! While the student is working, you can mute your mic and turn off your camera and do whatever you need to do.
+          Jump back on to have the student submit the assignment and you two can begin reviewing. Don't feel like you need to be in front
+          of your computer monitoring them. I would listen to see if they have questions pop up but they should do this question completely alone.
+          We use this time to get an idea of how they are doing so make sure they do their very best and you not help them until the review time.
+        </p>
+
+        <h3>Assigning Homework</h3>
+        <p>
+          Ideally this is done while your student is practicing so that they have uninterrupted session time. Make sure to assign a Daily and a Homework
+          assignment after each session. More instruction can be found for each assignment on the new assignment page. One last thing before leaving a session,
+          make sure to submit any assignmnt you started in the session so that the student doesn't have those confusing them during the week.
+        </p>
+      </details>
+
+      <details>
+        <summary>Reading Session</summary>
+        <h3>Review (30 Minutes)</h3>
+        <p>
+          We want to help the student understand their mistakes. As you review questions they got wrong make sure to not tell the them
+          the answer but have them explain what they did and help them correct mistakes one step at a time. Focus on showing the answer
+          in the passage and not just giving the answer. Students should develop the habit of having a reason for an answer based
+          on something they see in the text.
+        </p>
+        <p>
+          If a student did not do their homework, meaning they did not answer all question on their Daily or did not answer a sufficent
+          amount of question on their homework (should be around 35 give or take 10 -ish), please let us know and we will review the homework
+          and take action from their. What you can do in the mean time is create Worksheet assignments to take the place of the incomplete homework.
+          Use what you have from the homework first but if you don't have enough, then use the Worksheets.
+        </p>
+
+        <h3>Learn (60 minutes)</h3>
+        <p>
+          This you dedicated book club hour. Reading can only get better if we focus on comprehension. The idea behind book club
+          is that a student can only answer the questions if they truly comprehend the passage first. Together with your student
+          you will take turns reading a passage by creating a Worksheet assignment. Do one passage at a time. Popcorn read the 
+          paragraph and ask who, what, where, when, why, and how question. Every few paragraphs ask what the main idea of the 
+          passage is so far. We want your student to begin to develop the habit of engaging with the passage and not just reading
+          words. They goal is that the student will begin to ask these same questions as they read on their own. Encourage your
+          student to point out answers to these questions before you ever ask them. 
+        </p>
+        <p>
+          Make it fun. We know these passages can be a little less enjoyable to read than most things, but having fun with the 
+          passage will help the brain want to comprehend the passage. You student will mirror your energy so be excited about reading
+          together and exploring the stories.
+        </p>
+        <p>
+          Once you're done reading you should answer the questions together. Let them lead and explain their thoughts. Don't help them
+          get the answer, rather help them find the answer. They should be able to point out what information in the passage leads them to
+          their answer. The hope is that as you read you already talked about the very thing this question is asking about.
+        </p>
+
+        <h3>Practice (30 minutes)</h3>
+        <p>
+          This is the time for the student to practice on their own what they just learned. You should create a Practice
+          assigment with all of the topics that you covered today and let them do as many questions as they can. We recommend
+          letting your student work for no more than 1 passage before jumping in to review. Reviewing is simply going over with
+          the student what questions they got wrong and helping them get the correct answer. Then set them off for another Practice
+          assignment. Do this until the end of the session. 
+        </p>
+        <p>
+          This is your time to take a break! While the student is working, you can mute your mic and turn off your camera and do whatever you need to do.
+          Jump back on to have the student submit the assignment and you two can begin reviewing. Don't feel like you need to be in front
+          of your computer monitoring them. I would listen to see if they have questions pop up but they should do this question completely alone.
+          We use this time to get an idea of how they are doing so make sure they do their very best and you not help them until the review time.
+        </p>
+
+        <h3>Assigning Homework</h3>
+        <p>
+          Ideally this is done while your student is practicing so that they have uninterrupted session time. Make sure to assign a Daily and a Homework
+          assignment after each session. More instruction can be found for each assignment on the new assignment page. One last thing before leaving a session,
+          make sure to submit any assignmnt you started in the session so that the student doesn't have those confusing them during the week.
+        </p>
+      </details>
+
+      <details>
+        <summary>Science Session</summary>
+        <h3>Review (30 Minutes)</h3>
+        <p>
+          The purpose of this time is to review the topics that were taught last time. 
+          The goal should be to have the student teach to you how to identify the topics and how to approach them.
+          Do this one topic at a time. Split your time evenly between the topics. Use the questions they did for their Daily and Homework assignment.
+          They should be able to demonstrate the proper way they answered correct questions and then also explain
+          how to get the question they got wrong correct in the proper method.
+        </p>
+        <p>
+          If a student did not do their homework, meaning they did not answer all question on their Daily or did not answer a sufficent
+          amount of question on their homework (should be around 35 give or take 10 -ish), please let us know and we will review the homework
+          and take action from their. What you can do in the mean time is create Worksheet assignments to take the place of the incomplete homework.
+          Use what you have from the homework first but if you don't have enough, then use the Worksheets.
+        </p>
+
+        <h3>Learn (60 minutes)</h3>
+        <p>
+          This will be the bulk of the lesson where we learn new topics. You will teach the topics in the order
+          that they appear under the lessons section in the new assignment page. Start with the next topic that
+          hasn't been tuaght yet. The goal should be to explain to the student how to identify and appraoch the topic,
+          All of this information should be memorized but if you need a reminder see the curriculum above.
+          The student must show you that they understand and not merely tell you they do. Use a Worksheet assignment to 
+          to get questions of the given topic. 
+        </p>
+        <p>
+          You should start off by doing the problem for the student by showing
+          how you know this question is of the given type and then properly showing the approach. Do this a few times then
+          move on to holding their hand through the problem. Ask them guiding questions, "how do we know this is a _______ question,"
+          "how do we begin to apporach this type of question," etc. Help them figure it out step by step. Then move on to having them
+          walk through a problem out loud and explain it fully back to you. Hopefully by the time you do this a few times they should have it down.
+        </p>
+        <p>
+          Learning a topic should take as long as the student needs to really understand the material. We are looking for understanding, not
+          completion of the curriculum. If you have a student that is breezing through the topics then move quickly and if not then take the 
+          time you need. If you are worried about how long (or short) you are taking to teach a topic let us know and we can definitly help
+          you out. It will take time to really figure out the right timing for each student but early on you'll do great.
+        </p>
+
+        <h3>Practice (30 minutes)</h3>
+        <p>
+          This is the time for the student to practice on their own what they just learned. You should create a Practice
+          assigment with all of the topics that you covered today and let them do as many questions as they can. We recommend
+          letting your student work for no more than 10 minutes before jumping in to review. Reviewing is simply going over with
+          the student what questions they got wrong and helping them get the correct answer. Then set them off for another Practice
+          assignment. Do this until the end of the session. 
+        </p>
+        <p>
+          This is your time to take a break! While the student is working, you can mute your mic and turn off your camera and do whatever you need to do.
+          Jump back on to have the student submit the assignment and you two can begin reviewing. Don't feel like you need to be in front
+          of your computer monitoring them. I would listen to see if they have questions pop up but they should do this question completely alone.
+          We use this time to get an idea of how they are doing so make sure they do their very best and you not help them until the review time.
+        </p>
+
+        <h3>Assigning Homework</h3>
+        <p>
+          Ideally this is done while your student is practicing so that they have uninterrupted session time. Make sure to assign a Daily and a Homework
+          assignment after each session. More instruction can be found for each assignment on the new assignment page. One last thing before leaving a session,
+          make sure to submit any assignmnt you started in the session so that the student doesn't have those confusing them during the week.
+        </p>
+      </details>
+    </div>
 
   </body>
 </html>
