--- a/public/new-assignment.html
+++ b/public/new-assignment.html
@@ -192,7 +192,7 @@
             <li>You should now see the list of topics for that section ordered by frequency</li>
             <li>Check the desired topic (verify this is the only topic checked)</li>
             <li>Set the desired topic's weight to "1"</li>
-            <li>Set the "Number of Questions" to blank (READING: set to "1". This will give only 1 passage a time.)</li>
+            <li>Set the "Number of Questions" to blank (READING: set to "1". This will give only 1 passage at a time.)</li>
             <li>Set the "Open" time to any time before right now</li>
             <li>Set the "Close" time to some time in the future (make sure it is enough time to start it in the test taker)</li>
             <li>Set the "Time" to blank</li>
@@ -219,7 +219,7 @@
             <li>You should now see the list of topics for that section ordered by frequency</li>
             <li>Check the desired topics (verify these are the only topic checked)</li>
             <li>Set the desired topics' weights to their given frequency</li>
-            <li>Set the "Number of Questions" to blank (READING: set to "1". This will give only 1 passage a time.)</li>
+            <li>Set the "Number of Questions" to blank (READING: set to "1". This will give only 1 passage at a time.)</li>
             <li>Set the "Open" time to any time before right now</li>
             <li>Set the "Close" time to some time in the future (make sure it is enough time to start it in the test taker)</li>
             <li>Set the "Time" to blank</li>
@@ -282,7 +282,7 @@
             <li>Set the "Close" time to 2 days after open at midnight</li>
             <li>Set the "Time" appropriatley based on section:
               <ul>
-                <li>English - 75</li>
+                <li>English - 45</li>
                 <li>Math - 60</li>
                 <li>Reading - 35</li>
                 <li>Science - 35</li>
