--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -67,7 +67,8 @@
         <button class="button" onclick="window.location.href='../calendar.html'">Calendar</button>
         <button class="button" onclick="window.location.href='../new-tutor.html'">New Tutor</button>
         <button class="button" onclick="window.location.href='../new-assignment.html'">New Assignment</button>
-        <a href="https://flex.twilio.com/auburn-goose-1633" target="_blank">Contact Center</a>
+        <button class="button" onclick="window.location.href='../new-invoice.html'">New Invoice</button>
+        <!-- <a href="https://flex.twilio.com/auburn-goose-1633" target="_blank">Contact Center</a> -->
       </div>
 
       <h2>Users</h2>
