--- a/public/customer-dashboard.html
+++ b/public/customer-dashboard.html
@@ -54,6 +54,7 @@
           <a href="/test-taker.html" data-path="student">Test Taker</a>
           <a href="/new-assignment.html" data-query="student">New Assignment</a>
           <a href="/payment.html" data-query="parent">Payments</a>
+          <a href="/new-invoice.html" data-query="student,parent">New Invoice</a>
         </div>
       </nav>
       <main>
