fixed adding and removing images

--- a/public/testEditor.html
+++ b/public/testEditor.html
@@ -202,7 +202,7 @@
 
             <div class='rows' style = 'margin-left:10px;'>
               <button onclick = 'clickInput()' style = 'margin-top: 5px;'>Add Image</button>
-              <input id = 'englishImage' type = 'file' accept = "image/png" onchange="addImage()">
+              <input id = 'passageImage' type = 'file' accept = "image/png" onchange="addImage()">
             </div>
           </div>
         </div>
